Enable reverse charge for a specific ticket type (#1026)
* introduce VAT_STATUS for tickets

* prevent missing value for tickets_reservation.vat_status and fix root cause

* update PriceContainer logic, add tests

* update wording

* add TAX_DETAIL summary row

* fix typo + add test